--- a/index.html
+++ b/index.html
@@ -4,9 +4,43 @@
   <meta charset="UTF-8">
   <title>Simple Item List</title>
   <style>
-    body { font-family: Arial, sans-serif; margin: 2em; }
-    ul { list-style: none; padding: 0; }
-    li { margin-bottom: 8px; }
+    body {
+      font-family: 'Segoe UI', Arial, sans-serif;
+      margin: 2em;
+      background: #f7f9fc;
+    }
+    h1 {
+      color: #333;
+      margin-bottom: 1em;
+    }
+    ul {
+      list-style: none;
+      padding: 0;
+      max-width: 400px;
+      margin: 0 auto;
+    }
+    li {
+      margin-bottom: 16px;
+      background: #fff;
+      border-radius: 8px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.05);
+      transition: box-shadow 0.2s;
+      padding: 12px 18px;
+    }
+    li:hover {
+      box-shadow: 0 4px 12px rgba(0,0,0,0.12);
+    }
+    a {
+      text-decoration: none;
+      color: #1976d2;
+      font-size: 1.1em;
+      font-weight: 500;
+      transition: color 0.2s;
+    }
+    a:hover {
+      color: #0d47a1;
+      text-decoration: underline;
+    }
   </style>
 </head>
 <body>
@@ -14,20 +48,20 @@
   <ul id="itemList"></ul>
 
   <script>
-fetch('items.json')
-  .then(response => response.json())
-  .then(items => {
-    const listElement = document.getElementById('itemList');
-    items.forEach(item => {
-      const li = document.createElement('li');
-      const a = document.createElement('a');
-      a.href = item.url;
-      a.textContent = item.name;
-      a.target = "_blank";
-      li.appendChild(a);
-      listElement.appendChild(li);
+  fetch('items.json')
+    .then(response => response.json())
+    .then(items => {
+      const listElement = document.getElementById('itemList');
+      items.forEach(item => {
+        const li = document.createElement('li');
+        const a = document.createElement('a');
+        a.href = item.url;
+        a.textContent = item.name;
+        a.target = "_blank";
+        li.appendChild(a);
+        listElement.appendChild(li);
+      });
     });
-  });
   </script>
 </body>
 </html>
