Add some stuff.

--- a/index.html
+++ b/index.html
@@ -86,8 +86,10 @@
   </style>
 </head>
 <body>
+    <div>
   <button id="toggle-dark">Switch to Dark Mode</button>
   <h1>Item List</h1>
+    </div>
   <ul id="itemList"></ul>
 
   <script>
